Corrected menu item spacing

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -8,10 +8,10 @@
 
   .menuItem {
     padding: 1vw;
-    padding-right: 2vw;
-    padding-left: 2vw;
-    margin-right: 3vw;
-    margin-left: 3vw;
+    padding-right: 1vw;
+    padding-left: 1vw;
+    // margin-right: 3vw;
+    // margin-left: 3vw;
     // border: 2px solid white;
     // font-size: 1.5vw;
     color: white;
